<resources>
    <string name="app_name">Capstone</string>

    <!-- FireBase Storage -->
    <string name="storage_bucket" translatable="false">gs://ironbit-capstone.appspot.com</string>

    <string name="library_file_size">500</string>
    <string name="library_file_name" translatable="false">library.json</string>

    <string name="book_metadata_file_size">250</string>
    <string name="book_metadata_file_name" translatable="false">meta.json</string>

    <string name="image_file_path_suffix" translatable="false">.png</string>
    <string name="book_folder_path_prefix" translatable="false">book-</string>

    <string name="book_epub_file_size">200000</string>
    <string name="book_cover_image_size">250000</string>

    <!-- Fragment Main Menu -->
    <string name="user_name" translatable="false">Christian Noboa Mardini</string>

    <string name="user_mail" translatable="false">chris.noboa@gmail.com</string>

    <string name="library">Library</string>

    <string name="cloud">Cloud</string>

    <string name="local">Local</string>

    <string name="collection">Collection</string>

    <string name="manager">Manager</string>

    <!-- Message System -->
    <string name="notify_internet_not_working">Internet Connection Problems</string>

    <!-- Fragment Book Menu -->
    <string name="fragment_book_menu_erase_book_message">Are you sure to delete locally?</string>

    <string name="fragment_book_menu_erase_book_accepted">Book(s) deleted</string>

    <string name="fragment_book_menu_erase_book_cancelled">Book(s) cannot be deleted</string>

    <string name="fragment_book_menu_download_book_accepted">Book downloaded</string>

    <string name="fragment_book_menu_download_book_cancelled">Book cannot be downloaded</string>

    <!-- Manager Label Fragment -->
    <string name="manager_label_title">Manager Label</string>

    <string name="manager_label_menu_add_title">Add Label</string>

    <string name="manager_label_create_label_title">Create Label</string>

    <string name="manager_label_create_label_accept_message">Label created</string>

    <string name="manager_label_create_label_problem_message">Label cannot be created</string>

    <string name="manager_label_create_cancelled_message">Create label cancelled</string>

    <string name="manager_label_edit_label_title">Edit Label</string>

    <string name="manager_label_edit_label_accept_message">Label renamed</string>

    <string name="manager_label_edit_label_problem_message">Label cannot be renamed</string>

    <string name="manager_label_edit_cancelled_message">Rename label cancelled</string>

    <string name="manager_label_erase_label_message">Delete Label?</string>

    <string name="manager_label_erase_accept_message">Label erased</string>

    <string name="manager_label_erase_cancel_message">Erase label cancelled</string>

    <!-- Selection Book Functionality -->
    <string name="menu_selection_book_title">Select</string>

    <string name="menu_selection_book_erase_book">Erase</string>

    <string name="menu_selection_book_group_book">Group</string>

    <string name="menu_selection_book_cancel_group">Cancel</string>

    <string name="menu_selection_book_add_success">Book(s) added to label</string>

    <string name="menu_selection_book_add_failure">Book(s) cannot added to label</string>

    <!-- Book Search Functionality -->
    <string name="menu_book_search_action">Search</string>

    <string name="menu_book_search_cancel">Cancel</string>

    <string name="menu_book_search_message">No book found</string>

    <!-- Dialog -->
    <string name="dialog_accept">Accept</string>

    <string name="dialog_cancel">Cancel</string>

    <!-- Reader Activity -->
    <string name="table_of_contents">Table Of Contents</string>

    <!-- Accessibility -->
    <string name="accessibility_main_menu">Main Menu</string>

    <string name="accessibility_cancel">Cancel Option</string>

    <string name="accessibility_library_option">Library Option</string>

    <string name="accessibility_table_contents_option">Table Of Contents Option</string>

    <string name="accessibility_cloud_storage">Cloud Storage</string>

    <string name="accessibility_cloud_option">Cloud Library Option</string>

    <string name="accessibility_local_option">Local Library Option</string>

    <string name="accessibility_widget_option">Widget Open Book</string>

    <string name="accessibility_manager_label">Manager Label</string>

    <string name="accessibility_edit_label">Edit Label</string>

    <string name="accessibility_erase_label">Erase Label</string>

    <string name="accessibility_read_book">Read Book</string>

    <string name="accessibility_cancel_download">Cancel Download</string>

    <string name="accessibility_create_label_input">Create Label Input</string>

    <string name="accessibility_search_book">Search Book</string>

    <string name="accessibility_search_book_input">Search Book Input</string>

    <string name="accessibility_go_next_chapter">Go to Next Chapter</string>

    <string name="accessibility_go_previous_chapter">Go to Previous Chapter</string>

    <string name="accessibility_back_to_library">Back to Library</string>
</resources>
